...
                            Количество сыгранных квизов: \(statisticService?.gamesCount ?? 0)
                            Рекорд: \(bestGame.correct)/\(bestGame.total) (\(bestGame.date.dateTimeString))
                            Средняя точность: \(String(format: "%.2f", statisticService?.totalAccuracy ?? 0.0))% 
                        """
        
        let quizResults = AlertModel(
            title: "Этот раунд окончен!",
            message: alertMessage,
            buttonText: "Сыграть ещё раз",
            completion: {})
        
        if let viewController = viewController as? UIViewController {
            alertPresenter?.showAlert(from: quizResults, on: viewController)
...
